--- a/project-phase-1/style.css
+++ b/project-phase-1/style.css
@@ -969,6 +969,7 @@ nav {
 .form-group {
   display: flex;
   flex-direction: column;
+  margin-bottom: 11px;
 }
 
 .form-group label {
@@ -985,7 +986,11 @@ nav {
   border-radius: 4px;
   font-size: 0.9rem;
   outline: none;
-  margin-bottom: 11px;
+}
+
+.form-group input:focus,
+.form-group textarea:focus {
+  outline: 5px solid #007bff4f;
 }
 
 .form-group textarea {
@@ -995,6 +1000,42 @@ nav {
   border-radius: 4px;
   resize: none;
   outline: none;
+}
+
+.invalid-feedback {
+  display: none;
+  font-family: "Roboto";
+  font-size: 0.9rem;
+  color: #dc3545;
+  margin-top: 3.5px;
+}
+
+.is-valid {
+  border-color: #198754 !important;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right calc(0.375em + 0.1875rem) center;
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+
+.is-valid:focus {
+  outline: 5px solid #19875441 !important;
+}
+
+.is-invalid:focus {
+  outline: 5px solid #dc35463a !important;
+}
+
+.is-invalid {
+  border-color: #dc3545 !important;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right calc(0.375em + 0.1875rem) center;
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+
+.is-invalid ~ .invalid-feedback {
+  display: block;
 }
 
 .form-group input[type="submit"] {
@@ -1009,11 +1050,48 @@ nav {
   font-weight: bold;
   font-size: 1rem;
   color: white;
+  outline:none;
 }
 
 .form-group input[type="submit"]:hover {
   transform: scale(1.02);
   box-shadow: rgba(0, 0, 0, 0.65) 1.95px 1.95px 2.6px;
+}
+
+#alert {
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  font-family: "Roboto";
+  border-radius: 5px;
+}
+.show{
+  display: flex !important;
+}
+.alert-success{
+  color: #606e68;
+  background-color: #d1e7dd;
+  border: 1px solid #badbcc;
+}
+.alert-danger{
+  color: #842029;
+  background-color: #f8d7da;
+  border: 1px solid #f5c2c7;
+}
+#alert p {
+  font-size: 1rem;
+  padding: 12px 53px;
+}
+
+#alert button {
+  border: none;
+  background: transparent;
+  font-size: 1.4rem;
+  padding: 9px 53px;
+  cursor: pointer;
+}
+#alert span {
+  font-weight: bold;
 }
 
 @media screen and (max-width: 1290px) {
@@ -1157,7 +1235,6 @@ nav {
 }
 
 @media screen and (max-width: 694px) {
-  
   .navbar-top button {
     padding: 4px 11px;
   }
@@ -1348,7 +1425,6 @@ nav {
 }
 
 @media screen and (max-width: 460px) {
-  
   .navbar-top {
     margin: 0 8px;
   }
