--- a/Mustafa_HomePage_Feature1/HomePage.css
+++ b/Mustafa_HomePage_Feature1/HomePage.css
@@ -166,7 +166,9 @@
     display: block;
     opacity: 0.5;  
   }
-  #modal .close-btn {
+  #modal .close-btn,.close-btn2 {
+    border: 1px #fff;
+    background-color: #fff;
     align-self: flex-end;
     font-size: 1.4em;
     margin: 8px 8px 0;
@@ -597,4 +599,288 @@
     color:#aaa;
     margin-bottom:0;
   }
+
   
+
+
+  .LoginPage {
+    display: none;
+    z-index: 20;
+    /* position: fixed; */
+    background-color: #FFFFFF;
+    width: 400px;
+    height: 500px;
+    margin: 7em auto;
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+  }
+  
+  .Login-sign {
+    padding-top: 60px;
+    color: #294987;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+    font-size: 23px;
+  }
+  
+  .un {
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  margin-left: 46px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-family: 'Ubuntu', sans-serif;
+  }
+  
+  form.LoginForm {
+    padding-top: 40px;
+  }
+  
+  .pass {
+        width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  margin-left: 46px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-family: 'Ubuntu', sans-serif;
+  }
+  
+  
+  .un:focus, .pass:focus {
+    border: 2px solid rgba(0, 0, 0, 0.18) !important;
+    
+  }
+  
+  .LoginSubmit {
+  cursor: pointer;
+    border-radius: 5em;
+    color: #f7f9fc;
+    /* background: linear-gradient(to right, #9C27B0, #E040FB); */
+    background-color: #294987;
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-left: 35%;
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  }
+  
+  .forgot {
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    color: #294987;
+    padding-top: 55px;
+  }
+  
+  .LoginSubmit {
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    color: #294987;
+    text-decoration: none
+  }
+  
+  @media (max-width: 600px) {
+    .LoginPage {
+        border-radius: 0px;
+    }
+  }
+  
+  
+  #add-review-header
+  {
+    color: #294987;
+  }
+  #review-add-btn {
+    padding: 0;
+    font-size: 1.6em;
+    cursor: pointer;
+  }
+  /* ====================== Review Form ====================== */
+  #modal2 {
+    /* position: absolute;
+    left: 10vh;
+    top: 10vh; */
+    
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 600px;
+    width: 300px;
+    /* end css tricks */
+    /* z-index: -10; */
+    z-index: 3;
+    display: flex;
+    flex-direction: column;
+    /* width: 80vw; */
+    /* height: 80vh; */
+    border: 1px solid #666;
+    border-radius: 10px;
+    opacity: 0;
+    transition: all .3s;
+    overflow: hidden;
+    background-color:white;
+    /* visibility: hidden; */
+    display: none;
+  }
+  #modal2.show {
+    /* visibility: visible;   */
+    opacity: 1;
+    /* z-index: 10; */
+    display: flex;
+  }
+  .modal-overlay2 {
+    width: 100%;
+    height: 100%;
+    z-index: 2; /* places the modalOverlay between the main page and the modal dialog */
+    background-color: #000;
+    opacity: 0;
+    transition: all .3s;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    margin: 0;
+    padding: 0;
+  }
+  .modal-overlay2.show {
+    display: block;
+    opacity: 0.5;  
+  }
+  #modal2 .close-btn {
+    align-self: flex-end;
+    font-size: 1.4em;
+    margin: 8px 8px 0;
+    padding: 0 8px;
+    cursor: pointer;
+  }
+  /* form {
+    max-width: 900px;
+    padding: 0 20px 20px 20px;
+  } */
+  /* 
+  input,
+  label {
+    display: block;
+    width: 100%;
+  }
+  
+  label {
+    font-weight: bold;
+    margin-bottom: 5px;
+  } */
+  
+  /* input, */
+  /* input:not(input[type='radio']), */
+  /* input:not(type='radio'), */
+   /* textarea{
+    background: #f9f9f9;
+    border: 1px solid #294987;
+    border-radius: 8px;
+    box-shadow: inset 0 1px 1px #e1e1e1;
+    font-size: 16px;
+    padding: 8px;
+  } */
+  /* input[type="radio"] {
+    box-shadow: none;
+  } */
+  button {
+    min-width: 48px;
+    min-height: 48px;
+  }
+  button:hover {
+    border: 1px solid #ccc;
+    background-color: #fff;
+  }
+  button#review-add-btn, 
+  button.close-btn, 
+  button#submit-login-btn {
+    min-height: 40px;
+  }
+  #submit-login-btn{
+    cursor: pointer;
+    border-radius: 5em;
+    color: #f7f9fc;
+    /* background: linear-gradient(to right, #9C27B0, #E040FB); */
+    background-color: #294987;
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+    font-weight: bold;
+  }
+  
+  .fieldset2 {
+    margin-top: 20px;
+    color: #294987;
+    margin-left: 20px;
+  }
+  .fieldset2right {
+    /* align-self: flex-end; */
+    margin-left: 70px;
+    margin-top: 60px;
+  }
+  #review-form2-container {
+    width: 100%;
+    /* background-color: #eee; */
+    /* padding: 0 20px 26px; */
+    color: #333;
+    overflow-y: auto;
+    
+  }
+  #review-form2-container h2 {
+    margin: 0 0 0 6px;
+  }
+  #review-form2 {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    border: 1px solid #fff;
+    border-radius: 4px;
+   
+  }
+  #review-form2 label, #review-form2 input {
+    display: block;
+    /* width: 100%; */
+  }
+  #review-form2 label {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  #review-form2 .rate label, #review-form2 .rate input,
+  #review-form2 .rate1 label, #review-form2 .rate1 input {
+    display: inline-block;
+  }
+  /* Modified from: https://codepen.io/tammykimkim/pen/yegZRw */
+
+  #submit-review {
+    align-self: flex-end;
+  }
