--- a/styleU.css
+++ b/styleU.css
@@ -1,4 +1,4 @@
-* {
+------------------------------ */ * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -250,7 +250,7 @@ nav {
   background-repeat: no-repeat;
   background-size: auto;
   background-size: 100% 100%;
-  height: 100%;
+  height: 650px;
   width: 100%;
 }
 .contact-page-header {
@@ -282,6 +282,7 @@ nav {
   flex-direction: column;
   gap: 10px;
   width: 20%;
+  margin-left: 200px;
 }
 
 .testc {
@@ -292,9 +293,9 @@ nav {
 
 .contact-submit {
   background-color: whitesmoke;
-  margin-left: 52.5%;
-  padding: 5px;
-  margin-top: 40px;
+  margin-left: 12.5%;
+  padding: 1px;
+  margin-top: 75px;
   transition: all 0.3s;
   margin-bottom: 50px;
 }
@@ -303,4 +304,39 @@ nav {
   background-color: #3333ff;
   color: white;
   cursor: grab;
+}
+:root {
+  --success-color: #2ecc71;
+  --error-color: #e74c3c;
+}
+
+small {
+  color: var(--error-color);
+  visibility: hidden;
+}
+
+.contact-left.error input {
+  border-color: var(--error-color);
+  border-width: thick;
+}
+
+.contact-left.success input {
+  border-color: var(--success-color);
+  border-width: thick;
+}
+
+.contact-left.error small {
+  visibility: visible;
+}
+/* styles for offer page added  */
+.modal-content {
+  display: none;
+  color: rgb(37, 37, 37);
+  font-family: "Times New Roman", Times, serif;
+  background-color: #2cade9a1;
+  border: 2px solid blue;
+}
+
+.modal-content.show-modal {
+  display: block;
 }
