--- a/Mustafa_HomePage_Feature1/SignUp.css
+++ b/Mustafa_HomePage_Feature1/SignUp.css
@@ -7,8 +7,8 @@ body {
   margin: 0;
   padding: 0;
   background: #DDD;
-  background-image: url("HomeSS.jpg");
-  background-size: cover;
+  /* background-image: url("HomeSS.jpg"); */
+  /* background-size: cover; */
   font-size: 16px;
   color: #222;
   font-family: 'Roboto', sans-serif;
@@ -19,7 +19,7 @@ body {
   position: relative;
   margin: 5% auto;
   width: 600px;
-  height: 500px;
+  height: 550px;
   background: #FFF;
   border-radius: 2px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
