--- a/css/AboutUs.css
+++ b/css/AboutUs.css
@@ -513,6 +513,11 @@ h3.services{
   box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
   z-index: -1;
 }
+.contactUsText
+{
+  margin-top: 110px;
+  margin-left: 80px;
+}
 
 /* .screen-header {
   display: flex;
@@ -588,6 +593,7 @@ h3.services{
   display: block;
   position: absolute;
   left: 0;
+  margin-left: 80px;
   bottom: -10px;
   width: 160px;
   height: 4px;
@@ -596,11 +602,12 @@ h3.services{
 
 .app-contact {
   margin-top: auto;
-  font-size: 8px;
+  font-size: 12px;
   color: #888;
 }
 
 .app-form-group {
+  font-size: 25px;
   margin-bottom: 15px;
 }
 
@@ -696,6 +703,12 @@ h3.services{
   .app-title:after {
     display: none;
   }
+}
+#error
+{
+  font-size: 12px;
+  color: #ea1d6f;
+  margin-top: 18px;
 }
 
 @media screen and (max-width: 600px) {
