--- a/css/signUp.css
+++ b/css/signUp.css
@@ -18,7 +18,7 @@ body {
   /* margin: 5% auto; */
   margin-left: 500px;
   width: 600px;
-  height: 550px;
+  height: 600px;
   background: #FFF;
   border-radius: 2px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
@@ -65,7 +65,7 @@ input[type="password"]:focus {
 }
 
 input[type="submit"] {
-  margin-top: 28px;
+  margin-top: 15px;
   width: 120px;
   height: 32px;
   background: #294987;
@@ -192,7 +192,7 @@ button.social-signin.google {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 90%;
   height: 100%;
   overflow: hidden;
 }
@@ -301,4 +301,9 @@ button.social-signin.google {
       border-radius: 50%;
   }
 
+}
+#error
+{
+  font-size: 12px;
+  color: #DD4B39;
 }
